src/objects/LeanData__Quarterly_Metric__c.object
<CustomObject>
    <fields>
        <fullName>LeanData__Marketing_Influenced_Bookings_Percentage__c</fullName>
        <formula>IF( LeanData__Total_Bookings__c = 0, 0 , LeanData__Marketing_Influenced_Bookings__c / LeanData__Total_Bookings__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Marketing Influenced Bookings Percentage</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LeanData__Marketing_Influenced_Bookings__c</fullName>
        <label>Marketing Influenced Bookings</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LeanData__Marketing_Influenced_Pipeline_Percentage__c</fullName>
        <formula>IF( LeanData__Total_Pipeline__c = 0, 0 , LeanData__Marketing_Influenced_Pipeline__c / LeanData__Total_Pipeline__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Marketing Influenced Pipeline Percentage</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LeanData__Marketing_Influenced_Pipeline__c</fullName>
        <label>Marketing Influenced Pipeline</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LeanData__Marketing_Sourced_Bookings_Percentage__c</fullName>
        <formula>IF( LeanData__Total_Bookings__c = 0, 0 , LeanData__Marketing_Sourced_Bookings__c / LeanData__Total_Bookings__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Marketing Sourced Bookings Percentage</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LeanData__Marketing_Sourced_Bookings__c</fullName>
        <label>Marketing Sourced Bookings</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LeanData__Marketing_Sourced_Pipeline_Percentage__c</fullName>
        <formula>IF( LeanData__Total_Pipeline__c = 0, 0 , LeanData__Marketing_Sourced_Pipeline__c / LeanData__Total_Pipeline__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Marketing Sourced Pipeline Percentage</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LeanData__Marketing_Sourced_Pipeline__c</fullName>
        <label>Marketing Sourced Pipeline</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LeanData__Numerical_Index__c</fullName>
        <formula>TEXT(LeanData__Year__c) + &quot;&quot; + TEXT(LeanData__Quarter_Number__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Numerical Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Opportunities_Closed__c</fullName>
        <label>Opportunities Closed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeanData__Opportunities_Created__c</fullName>
        <label>Opportunities Created</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeanData__Quarter_Number__c</fullName>
        <label>Quarter Number</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeanData__Quarterly_Bookings_Goal__c</fullName>
        <label>Quarterly Bookings Goal</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LeanData__Quarterly_Pipeline_Goal__c</fullName>
        <label>Quarterly Pipeline Goal</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LeanData__Sales_Only_Bookings_Percentage__c</fullName>
        <formula>IF( LeanData__Total_Bookings__c = 0, 0 , LeanData__Sales_Only_Bookings__c / LeanData__Total_Bookings__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Only Bookings Percentage</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LeanData__Sales_Only_Bookings__c</fullName>
        <formula>LeanData__Total_Bookings__c -  LeanData__Marketing_Influenced_Bookings__c -  LeanData__Marketing_Sourced_Bookings__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Only Bookings</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LeanData__Sales_Only_Pipeline_Percentage__c</fullName>
        <formula>IF( LeanData__Total_Pipeline__c = 0, 0 , LeanData__Sales_Only_Pipeline__c / LeanData__Total_Pipeline__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Only Pipeline Percentage</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LeanData__Sales_Only_Pipeline__c</fullName>
        <formula>LeanData__Total_Pipeline__c -  LeanData__Marketing_Influenced_Pipeline__c -  LeanData__Marketing_Sourced_Pipeline__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Only Pipeline</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LeanData__Total_Bookings__c</fullName>
        <label>Total Bookings</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LeanData__Total_Pipeline__c</fullName>
        <label>Total Pipeline</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LeanData__Year__c</fullName>
        <label>Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Quarterly Metric</label>
    <nameField>
        <label>Quarterly Metrics Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quarterly Metrics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>